Fix odd gap at bottom of main section

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,7 +23,7 @@ body {
     display: grid;
     grid-template-rows: auto 1fr;
     grid-template-columns: 1fr auto;
-    gap: 1rem;
+    column-gap: 1rem;
     max-width: 860px;
 }
 
